--- a/breach.html
+++ b/breach.html
@@ -490,6 +490,15 @@
     
     
     </main>
+    <footer class="foot">
+         <p><a href="#" class="link bre">BREACH</a></p>
+
+          <div class="footer-link">
+          <p class="terms"><a href="#" class="help">Help</a></p>
+          <p class="terms"><a href="#" class="help">Terms</a></p>
+         <p class="terms"><a href="#" class="help">Privacy Policy</a></p>
+         </div>
+      </footer>
 
     <script>
       window.onscroll = function () {
