--- a/breach.html
+++ b/breach.html
@@ -57,14 +57,14 @@
 
     <nav id="navbar">
       <div>
-        <button class="feat tablinks"><a href="#Featured" class="">Featured</a></button>
+        <button class="feat tablinks">Featured</button>
       </div>
       <div>
-        <button class="feat tablinks"><a href="#Popular">Popular</a></button>
+        <button class="feat tablinks no">Popular</button>
       </div>
 
       <div>
-        <button class="feat tablinks"><a href="#Recent">Recent</a></button>
+        <button class="feat tablinks no">Recent</button>
       </div>
     </nav>
 
